samples/_failures_safe/1761221025_5bf096_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14198f17.c: In function ‘main’:
./samples/SAFE/__tmp_14198f17.c:166:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  166 |     int pos
      |     ^~~
./samples/SAFE/__tmp_14198f17.c:166:5: error: expected declaration or statement at end of input
